package org.sar.ppi.communication.AppEvents;

/**
 * interface to add application events
 */
public interface AppEvent {
    void run();
}
